feat: Implemented student CRUD endpoints
