# server/docs/swagger.yaml
@@ -1,5 +1,25 @@
 basePath: /api/v1/
 definitions:
+  domain.AcademicInfo:
+    properties:
+      admission_date:
+        type: string
+      class_section:
+        type: string
+      emergency_contact:
+        type: string
+      grade:
+        type: string
+      prev_school:
+        type: string
+      student_id:
+        type: string
+    required:
+    - admission_date
+    - class_section
+    - emergency_contact
+    - grade
+    type: object
   domain.AuthToken:
     properties:
       access_token:
@@ -44,6 +64,36 @@ definitions:
         type: integer
       total:
         type: integer
+    type: object
+  domain.PersonalInfo:
+    properties:
+      blood_group:
+        type: string
+      city:
+        type: string
+      date_of_birth:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      ggnder:
+        type: string
+      last_name:
+        type: string
+      phone:
+        type: string
+      street_address:
+        type: string
+    required:
+    - blood_group
+    - city
+    - date_of_birth
+    - first_name
+    - ggnder
+    - last_name
+    - phone
+    - street_address
     type: object
   domain.PersonalInformation:
     properties:
@@ -95,6 +145,76 @@ definitions:
     - qualification
     - subject_ids
     - teacher_id
+    type: object
+  domain.Student:
+    properties:
+      academic_info:
+        $ref: '#/definitions/domain.AcademicInfo'
+      created_at:
+        type: string
+      id:
+        type: integer
+      personal_info:
+        $ref: '#/definitions/domain.PersonalInfo'
+      updated_at:
+        type: string
+    required:
+    - academic_info
+    - personal_info
+    type: object
+  domain.StudentCreatePayload:
+    properties:
+      academic_info:
+        $ref: '#/definitions/domain.AcademicInfo'
+      created_at:
+        type: string
+      id:
+        type: integer
+      personal_info:
+        $ref: '#/definitions/domain.PersonalInfo'
+      updated_at:
+        type: string
+    required:
+    - academic_info
+    - personal_info
+    type: object
+  domain.StudentListRes:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/domain.Student'
+        type: array
+      message:
+        type: string
+      meta:
+        $ref: '#/definitions/domain.Meta'
+      status:
+        type: integer
+    type: object
+  domain.StudentSuccessRes:
+    properties:
+      data:
+        $ref: '#/definitions/domain.Student'
+      message:
+        type: string
+      status:
+        type: integer
+    type: object
+  domain.StudentUpdatePayload:
+    properties:
+      academic_info:
+        $ref: '#/definitions/domain.AcademicInfo'
+      created_at:
+        type: string
+      id:
+        type: integer
+      personal_info:
+        $ref: '#/definitions/domain.PersonalInfo'
+      updated_at:
+        type: string
+    required:
+    - academic_info
+    - personal_info
     type: object
   domain.SuccessRes:
     properties:
@@ -219,6 +339,146 @@ paths:
       summary: Login in to account
       tags:
       - Authentication
+  /student/{student_id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete student
+      parameters:
+      - description: student_id
+        in: path
+        name: student_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: student
+          schema:
+            $ref: '#/definitions/domain.SuccessRes'
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - JWT: []
+      summary: Delete student
+      tags:
+      - Student
+    get:
+      consumes:
+      - application/json
+      description: Get student by id
+      parameters:
+      - description: student_id
+        in: path
+        name: student_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: student
+          schema:
+            $ref: '#/definitions/domain.StudentSuccessRes'
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - JWT: []
+      summary: Get student by id student
+      tags:
+      - Student
+  /student/create:
+    post:
+      consumes:
+      - application/json
+      description: Create student
+      parameters:
+      - description: student
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/domain.StudentCreatePayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created new student
+          schema:
+            $ref: '#/definitions/domain.StudentSuccessRes'
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - JWT: []
+      summary: Create student
+      tags:
+      - Student
+  /student/list:
+    get:
+      consumes:
+      - application/json
+      description: Get student list
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: student
+          schema:
+            $ref: '#/definitions/domain.StudentListRes'
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - JWT: []
+      summary: Get student list student
+      tags:
+      - Student
+  /student/update:
+    put:
+      consumes:
+      - application/json
+      description: Update student
+      parameters:
+      - description: student
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/domain.StudentUpdatePayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Updated student
+          schema:
+            $ref: '#/definitions/domain.StudentSuccessRes'
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - JWT: []
+      summary: Update student
+      tags:
+      - Student
   /teacher/{teacher_id}:
     delete:
       consumes:
