# server/internal/route/student.go
@@ -14,9 +14,9 @@ func NewStudentRouter(app bootstrap.Application, routerGroup *gin.RouterGroup) {
 	studentUsecase := usecase.NewStudentUsecase(studentRepository)
 	studentController := controller.StudentController{StudentUsecase: studentUsecase}
 
-	routerGroup.POST("/student/create", studentController.GetStudentById)
-	routerGroup.GET("/student/list", studentController.GetStudentById)
+	routerGroup.POST("/student/create", studentController.CreateStudent)
+	routerGroup.GET("/student/list", studentController.GetStudentList)
 	routerGroup.GET("/student/:student_id", studentController.GetStudentById)
-	routerGroup.DELETE("/student/:student_id", studentController.GetStudentById)
-	routerGroup.PUT("/student/:student_id", studentController.GetStudentById)
+	routerGroup.DELETE("/student/:student_id", studentController.DeleteStudent)
+	routerGroup.PUT("/student/:student_id", studentController.UpdateStudent)
 }
